Added engine in package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "scripts": {
     "start": "node server.mjs"
   },
+  "engines": {
+    "node": "20.11.0"
+  },
   "author": "Your Name",
   "license": "ISC"
 }
-
