--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node-fetch": "^3.3.2"
   },
   "scripts": {
-    "start": "node server.mjs"
+    "start": "node server.js"
   },
   "engines": {
     "node": "20.11.0"
