--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.mjs",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "formdata-node": "^6.0.3",
     "form-data": "^4.0.0",
+    "formdata-node": "^6.0.3",
     "fs": "^0.0.1-security",
     "node-fetch": "^3.3.2"
   },
